Working on New Entry Page, with partial view from participants

--- a/ProntoEntries/ProntoEntries.vbproj
+++ b/ProntoEntries/ProntoEntries.vbproj
@@ -791,6 +791,7 @@
     <Content Include="Views\Participants\Details.vbhtml" />
     <Content Include="Views\Participants\Edit.vbhtml" />
     <Content Include="Views\Participants\Index.vbhtml" />
+    <Content Include="Views\Participants\ViewParticipants.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
