--- a/ProntoEntries/ProntoEntries.vbproj
+++ b/ProntoEntries/ProntoEntries.vbproj
@@ -251,6 +251,7 @@
     <Compile Include="Models\ManageViewModels.vb" />
     <Compile Include="Models\OrganiserClass.vb" />
     <Compile Include="Models\ParticipantsClass.vb" />
+    <Compile Include="Models\PaymentModel.vb" />
     <Compile Include="Models\RaceEventClass.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
