Created Authorized tags, limited menu access, cleaned up login and register pages

--- a/ProntoEntries/Web.config
+++ b/ProntoEntries/Web.config
@@ -19,6 +19,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="Email" value="no-reply@prontocs.co.za" />
+	<add key="password" value="ericR380@" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
