Update Login Form with Green Register Button (Rolo requested)

--- a/ProntoEntries/Web.config
+++ b/ProntoEntries/Web.config
@@ -11,8 +11,8 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ProntoEntries-20220924092105.mdf;Initial Catalog=aspnet-ProntoEntries-20220924092105;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Server=.\SQLExpress;Database=EntriesDB;User Id=pcsnimda;Password=ericR380@;" providerName="System.Data.SqlClient" />
-    <add name="EntriesDBEntities" connectionString="metadata=res://*/EntriesModel.csdl|res://*/EntriesModel.ssdl|res://*/EntriesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLExpress;initial catalog=EntriesDB;user id=pcsnimda;password=ericR380@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Server=192.168.1.20\SQLExpress;Database=EntriesDB;User Id=pcsnimda;Password=ericR380@;" providerName="System.Data.SqlClient" />
+    <add name="EntriesDBEntities" connectionString="metadata=res://*/EntriesModel.csdl|res://*/EntriesModel.ssdl|res://*/EntriesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.20\SQLExpress;initial catalog=EntriesDB;user id=pcsnimda;password=ericR380@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -26,6 +26,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	<globalization uiCulture="en" culture="en-US" />
 	<!--<httpRuntime requestValidationMode="2.0" />-->
   </system.web>
   <system.webServer>
