Upload before updates

--- a/ProntoEntries/Web.config
+++ b/ProntoEntries/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ProntoEntries-20220924092105.mdf;Initial Catalog=aspnet-ProntoEntries-20220924092105;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
@@ -19,20 +19,32 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	<add key="Email" value="no-reply@prontocs.co.za" />
-	<add key="password" value="ericR380@" />
+    <add key="Email" value="no-reply@prontocs.co.za" />
+    <add key="password" value="ericR380@" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.7.2">
+      <assemblies>
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.7.2" />
-	<globalization uiCulture="en" culture="en-US" />
-	<!--<httpRuntime requestValidationMode="2.0" />-->
+    <globalization uiCulture="en" culture="en-US" />
+    <!--<httpRuntime requestValidationMode="2.0" />-->
+    <httpHandlers>
+    </httpHandlers>
+    <pages>
+      <namespaces>
+      </namespaces>
+    </pages>
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+    <validation validateIntegratedModeConfiguration="false" />
+    <handlers>
+    </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
