--- a/ProntoEntries/Web.config
+++ b/ProntoEntries/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ProntoEntries-20220924092105.mdf;Initial Catalog=aspnet-ProntoEntries-20220924092105;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
@@ -42,6 +42,17 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+	  <rewrite>
+		  <rules>
+			  <rule name="HTTPS Redirect" stopProcessing="true">
+				  <match url="(.*)" />
+				  <conditions>
+					  <add input="{HTTPS}" pattern="^OFF$" />
+				  </conditions>
+				  <action type="Redirect" url="https://{HTTP_HOST}/{REQUEST_URI}" />
+			  </rule>
+		  </rules>
+	  </rewrite>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
     </handlers>
