--- a/ProntoEntries/ProntoEntries.vbproj
+++ b/ProntoEntries/ProntoEntries.vbproj
@@ -1292,6 +1292,7 @@
     <Content Include="Scripts\jquery-3.6.1.min.map" />
     <Content Include="Views\Reports\EntryDetail.vbhtml" />
     <Content Include="Views\Participants\ImportClubs.vbhtml" />
+    <Content Include="Views\AddonOptions\Get_ItemSize.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
