--- a/ProntoEntries/packages.config
+++ b/ProntoEntries/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="5.2.2" targetFramework="net472" />
+  <package id="bootstrap.chosen" version="1.0.0" targetFramework="net472" />
   <package id="ckeditor-full" version="4.20.1" targetFramework="net472" />
   <package id="ClosedXML" version="0.96.0" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net472" />
