--- a/ProntoEntries/ProntoEntries.vbproj
+++ b/ProntoEntries/ProntoEntries.vbproj
@@ -1302,6 +1302,7 @@
     <Content Include="Views\Reports\EntryDetail.vbhtml" />
     <Content Include="Views\Participants\ImportClubs.vbhtml" />
     <Content Include="Views\AddonOptions\Get_ItemSize.vbhtml" />
+    <Content Include="Views\Reports\Get_TotalEntries.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
