--- a/ProntoEntries/ProntoEntries.vbproj
+++ b/ProntoEntries/ProntoEntries.vbproj
@@ -1306,6 +1306,8 @@
     <Content Include="Views\Participants\Get_IsInRace.vbhtml" />
     <Content Include="Views\Entries\Get_ItemName.vbhtml" />
     <Content Include="Views\Entries\Get_ItemChosen.vbhtml" />
+    <Content Include="Views\Entries\Get_AddonDropdown.vbhtml" />
+    <Content Include="Views\Entries\Update.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
