--- a/ProntoEntries/packages.config
+++ b/ProntoEntries/packages.config
@@ -105,6 +105,7 @@
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="Rotativa" version="1.7.3" targetFramework="net472" />
+  <package id="Select.HtmlToPdf" version="22.2.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
