--- a/ProntoEntries/Views/Web.config
+++ b/ProntoEntries/Views/Web.config
@@ -27,6 +27,11 @@
   </appSettings>
 
   <system.webServer>
+	  <httpProtocol>
+		  <customHeaders>
+			  <add name="Access-Control-Allow-Origin" value="*" />
+		  </customHeaders>
+	  </httpProtocol>
     <handlers>
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
