--- a/ProntoEntries/ProntoEntries.vbproj
+++ b/ProntoEntries/ProntoEntries.vbproj
@@ -1311,6 +1311,7 @@
     <Content Include="Views\Entries\Get_ItemChosen.vbhtml" />
     <Content Include="Views\Entries\Get_AddonDropdown.vbhtml" />
     <Content Include="Views\Entries\Update.vbhtml" />
+    <Content Include="Views\Reports\Get_VerifiedTotals.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
