--- a/ProntoEntries/ProntoEntries.vbproj
+++ b/ProntoEntries/ProntoEntries.vbproj
@@ -1329,6 +1329,7 @@
     <Content Include="Views\Vouchers\Index.vbhtml" />
     <Content Include="Views\Entries\Get_SubLink.vbhtml" />
     <Content Include="Views\Vouchers\Get_ItemName.vbhtml" />
+    <Content Include="Views\Vouchers\IssueVoucher.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
