final testing on substitutions

--- a/ProntoEntries/ProntoEntries.vbproj
+++ b/ProntoEntries/ProntoEntries.vbproj
@@ -1330,6 +1330,8 @@
     <Content Include="Views\Entries\Get_SubLink.vbhtml" />
     <Content Include="Views\Vouchers\Get_ItemName.vbhtml" />
     <Content Include="Views\Vouchers\IssueVoucher.vbhtml" />
+    <Content Include="Views\Entries\Transfer.vbhtml" />
+    <Content Include="Views\Entries\Upgrade.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
